// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section should match snapshot 1`] = `
<section
  class="relative px-6 min-h-screen section-navbar-offset max-w-screen overflow-hidden bg-stone-50"
  id="test-section"
>
  <div
    class="flex flex-col justify-center lg:py-20 py-10"
  >
    <div>
      Test content
    </div>
  </div>
</section>
`;

exports[`Section should match snapshot with gradient 1`] = `
<section
  class="relative px-6 min-h-screen section-navbar-offset max-w-screen overflow-hidden bg-gradient-to-br from-stone-50 to-stone-100 custom-hero"
  id="test-section"
>
  <div
    class="flex flex-col justify-center lg:py-20 py-10"
  >
    <div>
      Test content
    </div>
  </div>
</section>
`;
